set TestUserToCtx with feature flag cleanup swagger cleanup and testing controller with postman
makefile (wip)
docker (wip)
